--- a/calculator-backend/src/main/resources/messages_en.properties
+++ b/calculator-backend/src/main/resources/messages_en.properties
@@ -79,6 +79,7 @@ message.changePassword=Change Password
 message.invalidOldPassword=Invalid Old Password
 message.invalidReCaptcha=Invalid reCaptcha
 message.unavailableReCaptcha=Registration is unavailable at this time.  Please try again later.
+message.roleNotFound=Role Not Found
 label.user.newPassword=New Password
 label.user.oldPassword=Old Password
 error.wordLength=Your password is too short
